--- a/pagina2.html
+++ b/pagina2.html
@@ -21,15 +21,10 @@
 
    <main>
   <section class="container">
-    <h2>Assunto da Página 2</h2>
-    <div class="line">
-      <div class="imagem-box">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Paisagem bonita">
-      </div>
-      <div class="texto-box">
-        <p>Este é o texto sobre o assunto da Página 2. A imagem ao lado mostra uma bela paisagem natural, ilustrando o tema abordado.</p>
-      </div>
-    </div>
+   <center><h2>história da dublagem</h2></center>
+    <br><h3>A dublagem, como a conhecemos, começou no Brasil em 1930 com a chegada de animações infantis, mas o marco inicial foi em 1937 com a dublagem de "Branca de Neve e os Sete Anões" da Disney. Até então, os filmes estrangeiros eram legendados, e a dublagem abriu caminho para que mais pessoas pudessem entender e apreciar o conteúdo audiovisual. </p>
+    <center> <br><iframe width="560" height="315" src="https://www.youtube.com/embed/Dasqi9wDS5c?si=T57CsQIkHfBec165" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
+    <br><h3>A dublagem consiste na substituição da voz original de um filme, série ou outra mídia por uma versão traduzida e interpretada em outro idioma, neste caso, o português brasileiro. Isso permite que o conteúdo seja acessível a um público mais amplo, especialmente aqueles que podem não ter facilidade com a leitura de legendas ou que preferem a experiência sonora da sua própria língua.  
   </section>
 </main>
 
