--- a/pagina2.html
+++ b/pagina2.html
@@ -31,7 +31,7 @@
 
 
 <footer>
-  <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
+  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB</p>
 </footer>
 
 </body>
