--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     
 <footer>
-  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB</p>
+  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB <center><img src="logo_ubec.png" width="20%" height="20%"></center></p>
 </footer>
 
 
