--- a/pagina2.html
+++ b/pagina2.html
@@ -30,8 +30,9 @@
 
 
 
+    
 <footer>
-  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB</p>
+  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB <center><img src="logo_ubec.png" width="20%" height="20%"></center></p>
 </footer>
 
 </body>
