--- a/pagina3.html
+++ b/pagina3.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <h1>Meu Site</h1>
+  <h1><div class="hover-underline">Dia do Dublador</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="pagina2.html">Página 2</a>
@@ -48,7 +48,9 @@
   
   <br><h3>A dublagem brasileira é reconhecida mundialmente por sua qualidade, e muitos dubladores se tornaram famosos por suas vozes marcantes em filmes, séries e animações. Alguns dos dubladores mais famosos do Brasil incluem Guilherme Briggs, Wendel Bezerra, Garcia Junior, Cecília Lemes, e muitos outros que emprestaram suas vozes a personagens icônicos. </h3>
 
-
+ <center><br><h2>AS melhores Dublagem brasileiras</h2></center>
+ 
+ <center><br><iframe width="560" height="315" src="https://www.youtube.com/embed/lzLUPTNMyZc?si=qHeCufzE-VxloaPM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
 
   
 
@@ -59,8 +61,9 @@
 
 </main>
 
+    
 <footer>
-  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB</p>
+  <p>&copy; 2025 Meu Site. Áquila Sousa Lopo. UCB <center><img src="logo_ubec.png" width="20%" height="20%"></center></p>
 </footer>
 
 </body>
