--- a/pagina4.html
+++ b/pagina4.html
@@ -10,6 +10,7 @@
 
 <header>
   <h1><div class="hover-underline">Dia do Dublador</h1>
+  
   <nav>
     <a href="index.html">Home</a>
     <a href="pagina2.html">Página 2</a>
@@ -24,9 +25,9 @@
     <center><h2>curiosidades sobre a dublagem</h2></center>
      
     <center><br><h3>Famosos que não são dubladores, mas fizeram dublagem</h3></center>
-    <center><h3>Muitos famosos brasileiros, não conhecidos como dubladores profissionais, já emprestaram suas vozes para personagens em animações e filmes. Alguns exemplos incluem: Luciano Huck, que dublou o Príncipe Flynn Rider em "Enrolados" e Rodrigo Santoro, que deu voz a Stuart Little no filme homônimo. Selton Mello também participou da dublagem, dando voz ao personagem Kuzco em "A Nova Onda do Imperador". Além desses, Dani Calabresa dublou a personagem Nojinho em "Divertida Mente", e Fernanda Montenegro participou da dublagem de "A Viagem de Chihiro". </h3></center>
+    <center><h3 text-align="justify">Muitos famosos brasileiros, não conhecidos como dubladores profissionais, já emprestaram suas vozes para personagens em animações e filmes. Alguns exemplos incluem: Luciano Huck, que dublou o Príncipe Flynn Rider em "Enrolados" e Rodrigo Santoro, que deu voz a Stuart Little no filme homônimo. Selton Mello também participou da dublagem, dando voz ao personagem Kuzco em "A Nova Onda do Imperador". Além desses, Dani Calabresa dublou a personagem Nojinho em "Divertida Mente", e Fernanda Montenegro participou da dublagem de "A Viagem de Chihiro". </h3></center>
     <center><iframe width="560" height="315" src="https://www.youtube.com/embed/kt-i08Aljlg?si=uFhNIxe1nUmAYF_K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
-   <center><br><h3>O "Loop" Infinito: As cenas são gravadas em pequenos trechos, os famosos "loops". O dublador ouve o áudio original, vê a cena várias vezes e, então, tenta reproduzir a fala com a mesma emoção e no tempo certo. Às vezes, uma única frase pode levar dezenas de tentativas até ficar impecável.</h3></center>
+   <center><br><h3 text-align="justify">O "Loop" Infinito: As cenas são gravadas em pequenos trechos, os famosos "loops". O dublador ouve o áudio original, vê a cena várias vezes e, então, tenta reproduzir a fala com a mesma emoção e no tempo certo. Às vezes, uma única frase pode levar dezenas de tentativas até ficar impecável.</h3></center>
   </section>
 </main>
 
